--- a/IP Enrichment/Process IP-ZhengJie.ipynb
+++ b/IP Enrichment/Process IP-ZhengJie.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dca118d9",
    "metadata": {
     "scrolled": true
@@ -2337,7 +2337,96 @@
       "Processing: #1316 - 13.33.33.20 Country: SG\n",
       "Processing: #1317 - 17.253.60.241 Country: SG\n",
       "Processing: #1318 - 156.225.96.23 Country: SG\n",
-      "Processing: #1319 - 52.74.181.141 Country: SG\n"
+      "Processing: #1319 - 52.74.181.141 Country: SG\n",
+      "Processing: #1320 - 54.255.46.234 Country: SG\n",
+      "Processing: #1321 - 23.205.209.67 Country: SG\n",
+      "Processing: #1322 - 39.109.161.71 Country: SG\n",
+      "Processing: #1323 - 116.88.67.183 Country: SG\n",
+      "Processing: #1324 - 52.221.116.71 Country: SG\n",
+      "Processing: #1325 - 125.56.199.34 Country: SG\n",
+      "Processing: #1326 - 13.33.33.100 Country: SG\n",
+      "Processing: #1327 - 17.248.164.50 Country: SG\n",
+      "Processing: #1328 - 222.164.144.253 Country: SG\n",
+      "Processing: #1329 - 13.35.14.254 Country: SG\n",
+      "Processing: #1330 - 51.79.251.245 Country: SG\n",
+      "Processing: #1331 - 69.192.164.181 Country: SG\n",
+      "Processing: #1332 - 103.6.151.249 Country: SG\n",
+      "Processing: #1333 - 172.70.142.216 Country: SG\n",
+      "Processing: #1334 - 54.254.20.23 Country: SG\n",
+      "Processing: #1335 - 23.59.168.82 Country: SG\n",
+      "Processing: #1336 - 18.138.161.18 Country: SG\n",
+      "Processing: #1337 - 157.240.235.59 Country: SG\n",
+      "Processing: #1338 - 72.247.81.170 Country: SG\n",
+      "Processing: #1339 - 138.75.60.30 Country: SG\n",
+      "Processing: #1340 - 40.99.8.194 Country: SG\n",
+      "Processing: #1341 - 52.84.251.95 Country: SG\n",
+      "Processing: #1342 - 157.240.7.53 Country: SG\n",
+      "file has been processed on 28022023 which is <7 days ago, will skip API call\n",
+      "Processing: #1343 - 218.212.5.253 Country: SG\n",
+      "Processing: #1344 - 17.253.118.201 Country: SG\n",
+      "file has been processed on 28022023 which is <7 days ago, will skip API call\n",
+      "Processing: #1345 - 184.87.200.86 Country: SG\n",
+      "Processing: #1346 - 51.79.204.4 Country: SG\n",
+      "Processing: #1347 - 18.136.0.191 Country: SG\n",
+      "Processing: #1348 - 118.215.81.86 Country: SG\n",
+      "Processing: #1349 - 13.33.33.30 Country: SG\n",
+      "Processing: #1350 - 17.253.61.218 Country: SG\n",
+      "file has been processed on 28022023 which is <7 days ago, will skip API call\n",
+      "Processing: #1351 - 23.106.127.38 Country: SG\n",
+      "Processing: #1352 - 13.33.88.46 Country: SG\n",
+      "Processing: #1353 - 13.33.88.29 Country: SG\n",
+      "Processing: #1354 - 150.109.90.58 Country: SG\n",
+      "Processing: #1355 - 13.213.195.131 Country: SG\n",
+      "Processing: #1356 - 172.224.26.134 Country: SG\n",
+      "Processing: #1357 - 52.84.251.5 Country: SG\n",
+      "Processing: #1358 - 40.99.10.82 Country: SG\n",
+      "Processing: #1359 - 165.21.111.141 Country: SG\n",
+      "Processing: #1360 - 23.220.203.43 Country: SG\n",
+      "Processing: #1361 - 178.128.25.248 Country: SG\n",
+      "Processing: #1362 - 150.109.91.8 Country: SG\n",
+      "Processing: #1363 - 23.211.140.97 Country: SG\n",
+      "Processing: #1364 - 18.136.188.51 Country: SG\n",
+      "Processing: #1365 - 18.136.4.237 Country: SG\n",
+      "Processing: #1366 - 203.117.35.44 Country: SG\n",
+      "Processing: #1367 - 195.133.142.205 Country: SG\n",
+      "Processing: #1368 - 52.84.228.209 Country: SG\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: #1369 - 101.33.26.115 Country: SG\n",
+      "Processing: #1370 - 18.138.5.112 Country: SG\n",
+      "Processing: #1371 - 13.33.33.128 Country: SG\n",
+      "Processing: #1372 - 222.164.6.40 Country: SG\n",
+      "Processing: #1373 - 13.227.254.13 Country: SG\n",
+      "Processing: #1374 - 23.54.56.78 Country: SG\n",
+      "Processing: #1375 - 118.215.81.147 Country: SG\n",
+      "Processing: #1376 - 52.221.66.87 Country: SG\n",
+      "Processing: #1377 - 17.253.61.203 Country: SG\n",
+      "file has been processed on 28022023 which is <7 days ago, will skip API call\n",
+      "Processing: #1378 - 13.228.161.151 Country: SG\n",
+      "Processing: #1379 - 13.227.254.60 Country: SG\n",
+      "Processing: #1380 - 157.240.235.1 Country: SG\n",
+      "Processing: #1381 - 52.84.251.7 Country: SG\n",
+      "Processing: #1382 - 3.1.207.14 Country: SG\n",
+      "Processing: #1383 - 13.33.33.22 Country: SG\n",
+      "Processing: #1384 - 13.33.33.66 Country: SG\n",
+      "Processing: #1385 - 13.227.254.105 Country: SG\n",
+      "Processing: #1386 - 111.223.64.81 Country: SG\n",
+      "Processing: #1387 - 54.151.248.105 Country: SG\n",
+      "Processing: #1388 - 17.248.154.4 Country: SG\n",
+      "Processing: #1389 - 104.69.36.150 Country: SG\n",
+      "Processing: #1390 - 103.107.199.163 Country: SG\n",
+      "Processing: #1391 - 54.254.242.156 Country: SG\n",
+      "Processing: #1392 - 17.248.164.109 Country: SG\n",
+      "Processing: #1393 - 13.228.151.208 Country: SG\n",
+      "Status Code:  429 please take a look\n",
+      "======= process_iplist() END ======= \n",
+      "\n",
+      "\n",
+      "completed\n"
      ]
     }
    ],
