screenshot feature sorta done

--- a/Domain Enrichment/Process Domains-ZhengJie.ipynb
+++ b/Domain Enrichment/Process Domains-ZhengJie.ipynb
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ef01083b",
    "metadata": {},
    "outputs": [
@@ -747,12 +747,67 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Screenshot of 'http://1.1.1.1' written to '1-1-1-1.png'\n"
+      "Screenshot of 'http://1.1.1.1' written to '1-1-1-1.2.png'\n"
      ]
     }
    ],
    "source": [
-    "!shot-scraper 1.1.1.1"
+    "!shot-scraper 1.1.1.1 --wait 2000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fe33d0b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\Scripts\\shot-scraper.exe\\__main__.py\", line 7, in <module>\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\click\\core.py\", line 1128, in __call__\n",
+      "    return self.main(*args, **kwargs)\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\click\\core.py\", line 1053, in main\n",
+      "    rv = self.invoke(ctx)\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\click\\core.py\", line 1659, in invoke\n",
+      "    return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\click\\core.py\", line 1395, in invoke\n",
+      "    return ctx.invoke(self.callback, **ctx.params)\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\click\\core.py\", line 754, in invoke\n",
+      "    return __callback(*args, **kwargs)\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\shot_scraper\\cli.py\", line 293, in shot\n",
+      "    shot = take_shot(\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\shot_scraper\\cli.py\", line 964, in take_shot\n",
+      "    response = page.goto(url)\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\playwright\\sync_api\\_generated.py\", line 9183, in goto\n",
+      "    self._sync(\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\playwright\\_impl\\_sync_base.py\", line 104, in _sync\n",
+      "    return task.result()\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\playwright\\_impl\\_page.py\", line 491, in goto\n",
+      "    return await self._main_frame.goto(**locals_to_params(locals()))\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\playwright\\_impl\\_frame.py\", line 147, in goto\n",
+      "    await self._channel.send(\"goto\", locals_to_params(locals()))\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\playwright\\_impl\\_connection.py\", line 44, in send\n",
+      "    return await self._connection.wrap_api_call(\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\playwright\\_impl\\_connection.py\", line 419, in wrap_api_call\n",
+      "    return await cb()\n",
+      "  File \"C:\\Users\\puddi\\anaconda3\\lib\\site-packages\\playwright\\_impl\\_connection.py\", line 79, in inner_send\n",
+      "    result = next(iter(done)).result()\n",
+      "playwright._impl._api_types.Error: net::ERR_CONNECTION_TIMED_OUT at http://101.32.113.139/\n",
+      "=========================== logs ===========================\n",
+      "navigating to \"http://101.32.113.139/\", waiting until \"load\"\n",
+      "============================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "!shot-scraper 101.32.113.139 --wait 2000"
    ]
   },
   {
